--- a/Second-project/style.css
+++ b/Second-project/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@100..900&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,12 +7,13 @@
     font-family: "Noto Sans Devanagari", sans-serif;
 }
 
-html,body{
+html,
+body {
     width: 100%;
     height: 100%;
 }
 
-main{
+main {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -19,22 +21,22 @@ main{
     justify-content: center;
 }
 
-#left{
+#left {
     width: 35%;
     height: 82%;
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
+    justify-content: space-between;
     padding-bottom: 3%;
 }
 
-#left>h1{
+#left>h1 {
     font-size: 7vw;
     font-weight: 400;
     line-height: 1;
 }
 
-#left>.bottom>.colors{
+#left>.bottom>.colors {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -45,60 +47,67 @@ main{
     border-radius: 50px;
 }
 
-#left>.bottom>.colors>.brown{
+#left>.bottom>.colors>.brown {
     width: 1vw;
     height: 1vw;
     border-radius: 50%;
     background-color: burlywood;
     margin: 0 .5vw 0 1vw;
 }
-#left>.bottom>.colors>.maroon{
+
+#left>.bottom>.colors>.maroon {
     width: 1vw;
     height: 1vw;
     border-radius: 50%;
     background-color: maroon;
 }
 
-#left>.bottom>.dets>h2{
+#left>.bottom>.dets>h2 {
     font-size: 1.7vw;
     font-weight: 600;
 }
-#left>.bottom>.dets>p{
-   width: 70%;
+
+#left>.bottom>.dets>p {
+    width: 70%;
 }
 
 
-#right{
+#right {
     position: relative;
     width: 35%;
     height: 75%;
     padding: 0 7vw;
 }
 
-#right>.price{
+#right>.price {
     width: 100%;
     height: 12%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-#right>.price>.rating{
+
+#right>.price>.rating {
     display: flex;
     align-items: center;
 }
-#right>.price>.rating>h4{
+
+#right>.price>.rating>h4 {
     margin-right: .7vw;
     font-size: .7vw;
 }
-#right>.price>.rating>i{
+
+#right>.price>.rating>i {
     font-size: .7vw;
 }
-#right>img{
+
+#right>img {
     width: 100%;
     overflow: hidden;
     object-fit: cover;
 }
-#right>.cart{
+
+#right>.cart {
     position: absolute;
     display: flex;
     align-items: center;
@@ -110,15 +119,101 @@ main{
     background: #000;
     border-radius: 50%;
 }
-#right>.cart>h3{
+
+#right>.cart>h3 {
     color: #ffffffd3;
     font-size: 1.1vw;
     font-weight: 400;
 }
-#right>h4{
+
+#right>h4 {
     position: absolute;
     top: 22vw;
     left: -4vw;
-    rotate:  -90deg;
+    rotate: -90deg;
     font-size: 2vw;
+}
+
+@media (max-width: 800px) {
+    main {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #left {
+        width: 90%;
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 10vw;
+    }
+
+    #left>h1 {
+        font-size: 9vw;
+    }
+
+    #left>.bottom>.colors {
+        margin: 5vw 0;
+    }
+
+    #left>.bottom>.colors>h4 {
+        font-size: 2vh;
+    }
+
+    #left>.bottom>.colors>.brown {
+        width: 2vmax;
+        height: 2vmax;
+        margin: 0 1vw 0 4vw;
+    }
+
+    #left>.bottom>.colors>.maroon {
+        width: 2vmax;
+        height: 2vmax;
+    }
+
+    #left>.bottom>.dets>h2 {
+        font-size: 5vw;
+        font-weight: 400;
+    }
+
+    #left>.bottom>.dets>p {
+        width: 90%;
+        font-size: 3.2vw;
+    }
+
+
+    #right {
+        width: 65%;
+        height: 100%;
+        margin-top: 5vh;
+    }
+
+    #right>.price>.rating>h4 {
+        margin-right: 2vw;
+        font-size: 2.4vw;
+    }
+
+    #right>.price>.rating>i {
+        font-size: 2vw;
+    }
+
+    #right>.cart {
+        top: 20vw;
+        right: 3vw;
+        width: 10vw;
+        height: 10vw;
+    }
+
+    #right>.cart>h3 {
+        font-size: 1.4vw;
+    }
+
+    #right>h4 {
+        top: 42vw;
+        left: -16vw;
+        rotate: -90deg;
+        font-size: 4.3vw;
+    }
+
 }
